namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-prisoner-download-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-prisoner-download-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "hmpps-prisoner-download"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-prisoner-download.git"
    cloud-platform.justice.gov.uk/slack-alert-channel: "syscon_alerts"
    cloud-platform.justice.gov.uk/slack-channel: "syscon_team"
    cloud-platform.justice.gov.uk/team-name: "syscon-devs"
